	- Test::Kwalitee is now marked as an author-only test.
	- Added tests for correct handling of 32-bit values in
	  win32.t.  Corrected documentation regarding Win32 exitval
	  size.  Thanks to Jan Dubois for alerting me to the 32-bitness
	  of Windows exit values.
	- Added tests to ensure that newlines are properly stripped
	  with single-arg system and capture.

0.12  Fri Jun  6 17:15:52 AUSEST 2008
	- Corrected doubled package names in some diagnostics
	  when used in taint mode, or when run() is called without
	  arguments.

0.11  Fri Jun  6 12:15:39 AUSEST 2008
	- Drop-in system() replacement available.
	- Simplified synopsis statement.
	- Provided advanced usage documentation.
	- Added comparison to other system APIs.
	- Updated Changes to put most recent changes at top.
	- Makefile.PL tweaks to build cleanly under Debian's dh-make-perl.
	- Upgraded to Module::Install 0.75 with custom bugfixes.

0.10  Thu May 15 00:39:59 AUSEST 2008
	- Multi-arg captures now work on Perl 5.6.x. (RT #35866)
	- Minor corrections to diagnostics documentation.
	- Adjusted module summary.

0.09  Mon May 12 23:38:29 AUSEST 2008
	- Test suite now provides better diagnostics if taint
	  tests fail unexpectedly early.
	- Multi-argument run() will now search $ENV{PATH}
	  under Win32.
	- Documented $ENV{PATH} foibles on Win32 systems under
	  the Windows-specific notes section of the documentation.
	- Implemented capture(), which is the equivalent
	  of run() for backticks.
	- General documentation improvements and clarifications,
	  thanks to Jacinta Richardson.
	- The special value EXIT_ANY (aka [-1]) can be used to
	  indicate that any exit value is acceptable from a process.
	- Added author-only Perl::Critic tests.
	- Updated diagnostics section in POD.
	- License changed to that of Perl 5.6.0, or any later version.
	- LICENSE file added to distribution.
	- Moved to Module::Install for build system.
	- Better failures when seeing unexpected things from POSIX.pm